@@ -65,7 +65,7 @@ class Schema(openmediavault.json.Schema):
                     ) from None
             elif "sshpubkey-openssh" == schema['format']:
                 if not re.match(
-                    r'^ssh-rsa AAAA[0-9A-Za-z+\/]+[=]{0,3}\s*'
+                    r'^ssh-(rsa|ed25519) AAAA[0-9A-Za-z+\/]+[=]{0,3}\s*'
                     r'([^@]+@[^@]+|.+)*$',
                     value,
                 ):
@@ -88,6 +88,7 @@ class Schema(openmediavault.json.Schema):
                         % value,
                     ) from None
             elif "sshprivkey-rsa" == schema['format']:
+                # Deprecated: Use "sshprivkey-pem" instead.
                 if not re.match(
                     r'^-----BEGIN RSA PRIVATE KEY-----'
                     r'(\n|\r|\f)(.+)(\n|\r|\f)'
@@ -97,7 +98,19 @@ class Schema(openmediavault.json.Schema):
                 ):
                     raise openmediavault.json.SchemaValidationException(
                         name,
-                        "The value '%s' is no SSH private key (RSA)." % value,
+                        "The value '%s' is no SSH private key (PEM)." % value,
+                    ) from None
+            elif "sshprivkey-pem" == schema['format']:
+                if not re.match(
+                    r'^-----BEGIN (OPENSSH|RSA) PRIVATE KEY-----'
+                    r'(\n|\r|\f)(.+)(\n|\r|\f)'
+                    r'-----END (OPENSSH|RSA) PRIVATE KEY-----$',
+                    value,
+                    flags=re.DOTALL | re.MULTILINE,
+                ):
+                    raise openmediavault.json.SchemaValidationException(
+                        name,
+                        "The value '%s' is no SSH private key (PEM)." % value,
                     ) from None
             elif "sharename" == schema['format']:
                 # We are using the SMB/CIFS file/directory naming convention
