@@ -20,6 +20,9 @@ openmediavault (7.0-30) unstable; urgency=low
     by reducing the query parameters to the minimum.
   * Add a dashboard widget to display the temperatures of all
     physical disks.
+  * Add support for choosing between the RSA and Ed25519 types
+    when creating an SSH certificate in the UI.
+  * Remove support of importing SSH DSA keys.
   * Issue #1649: Rearrange the `Storage | Shared Folders | ACL`
     page.
   * Issue #1676: Add an UI endpoint to trigger a download via RPC.
